--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -12,6 +12,6 @@ jobs:
         with:
           go-version: '1.22.x'
       - name: Build
-        run: go build -v ./...
+        run: go build -v ./cmd/onboard/*.go
       - name: Test with the Go CLI
         run: go test
