--- a/.github/workflows/deploying.yml
+++ b/.github/workflows/deploying.yml
@@ -18,7 +18,7 @@ jobs:
           go-version: '1.24'
 
       - name: Build
-        run: go build -o onboard ./cmd/onboard/*.go
+        run: GOOS=linux GOARCH=amd64 go build -o onboard ./cmd/onboard/*.go
 
       - name: Copy file via SSH
         uses: appleboy/scp-action@v0.1.7
